fixes #8 - skips projects with disabled Git repository feature
Evaluates the project property "repository_access_level" for the value "disabled".